--- a/PMP/src/main/resources/com/qnp/pmp/Officer/officer.css
+++ b/PMP/src/main/resources/com/qnp/pmp/Officer/officer.css
@@ -19,6 +19,11 @@
     -fx-border-radius: 6px;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0.3, 0, 2);
 }
+.delete-button {
+    -fx-background-color: #e74c3c;
+    -fx-text-fill: white;
+}
+
 .add-button {
     -fx-background-color: linear-gradient(to bottom, #2ecc71, #27ae60); /* Xanh lá cây */
     -fx-text-fill: white;
