--- a/PMP/src/main/resources/com/qnp/pmp/Officer/OfficerView.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/Officer/OfficerView.fxml
@@ -29,13 +29,12 @@
             <TableView fx:id="officerTable" VBox.vgrow="ALWAYS" styleClass="table-view">
                 <columns>
                     <TableColumn fx:id="fullNameCol" text="Họ tên" />
-                    <TableColumn fx:id="phoneCol" text="SĐT" />
+                    <TableColumn fx:id="birthYearCol" text="Năm sinh" />
                     <TableColumn fx:id="positionCol" text="Chức vụ" />
                     <TableColumn fx:id="unitCol" text="Đơn vị" />
-                    <TableColumn fx:id="identifierCol" text="Mã định danh" />
                     <TableColumn fx:id="homeTownCol" text="Quê quán" />
-                    <TableColumn fx:id="dobCol" text="Ngày sinh" />
-                    <TableColumn fx:id="sinceCol" text="Ngày bắt đầu"/>
+                    <TableColumn fx:id="noteCol" text="Ghi chú"/>
+
                 </columns>
             </TableView>
         </VBox>
