--- a/PMP/src/main/resources/com/qnp/pmp/Officer/EditOfficer.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/Officer/EditOfficer.fxml
@@ -34,9 +34,10 @@
 
         <Label text="Năm sinh:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
         <TextField fx:id="birthYearField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-
-        <Label text="Ghi chú:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-        <TextArea fx:id="noteField" GridPane.rowIndex="5" GridPane.columnIndex="1" prefRowCount="3"/>
+        <Label text="Ngày bắt đầu:" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+        <DatePicker fx:id="sinceDatePicker" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+        <Label text="Ghi chú:" GridPane.rowIndex="9" GridPane.columnIndex="0"/>
+        <TextArea fx:id="noteField" GridPane.rowIndex="9" GridPane.columnIndex="1" prefRowCount="3"/>
     </GridPane>
 
     <!-- Nút lưu -->
