--- a/PMP/src/main/resources/com/qnp/pmp/Officer/officer.css
+++ b/PMP/src/main/resources/com/qnp/pmp/Officer/officer.css
@@ -16,6 +16,12 @@
     -fx-padding: 8 14;
     -fx-background-radius: 6;
 }
+.button {
+    -fx-wrap-text: false;
+    -fx-text-overrun: clip; /* hoặc ellipsis nếu bạn muốn cắt chữ */
+    -fx-font-size: 13px;
+    -fx-font-weight: bold;
+}
 
 .studytime-button:hover {
     -fx-background-color: #138496;
