--- a/PMP/src/main/resources/com/qnp/pmp/UserDashBoard/Dashboard.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/UserDashBoard/Dashboard.fxml
@@ -10,7 +10,7 @@
 <AnchorPane stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.AdminDashBoardController">
     <HBox prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
         <VBox prefWidth="200.0" spacing="10.0" style="-fx-background-color: #2c3e50;">
-            <Label styleClass="sidebar-title" text="🧑‍💻 SuperAdmin" />
+            <Label styleClass="sidebar-title" text="🧑‍💻 Admin" />
             <ListView fx:id="menuList" styleClass="sidebar-list" />
         </VBox>
 
