--- a/PMP/src/main/resources/com/qnp/pmp/SuperAdmin/UserManagementView.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/SuperAdmin/UserManagementView.fxml
@@ -10,8 +10,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
-<BorderPane prefHeight="500" prefWidth="800" style="-fx-background-color: #f4f6f8;" stylesheets="@user.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.UserManagementController">
+<!--        stylesheets="@user.css"-->
+<BorderPane prefHeight="500" prefWidth="800" style="-fx-background-color: #f4f6f8;"  xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.UserManagementController">
 
     <!-- Tiêu đề -->
     <top>
