--- a/PMP/src/main/resources/com/qnp/pmp/SuperAdmin/Dashboard.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/SuperAdmin/Dashboard.fxml
@@ -6,15 +6,17 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Priority?>
 
 <AnchorPane stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.SuperAdminDashBoardController">
-    <HBox prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-        <VBox prefWidth="200.0" spacing="10.0" style="-fx-background-color: #2c3e50;">
+    <HBox AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+        <!-- Sidebar cố định chiều rộng -->
+        <VBox fx:id="sidebar" spacing="10.0" style="-fx-background-color: #2c3e50;" minWidth="200" maxWidth="250" prefWidth="220">
             <Label styleClass="sidebar-title" text="🧑‍💻 SuperAdmin" />
-            <ListView fx:id="menuList" styleClass="sidebar-list" />
+            <ListView fx:id="menuList" styleClass="sidebar-list" VBox.vgrow="ALWAYS" />
         </VBox>
 
-        <!-- Content Area -->
-        <StackPane fx:id="contentArea" prefHeight="600.0" prefWidth="690.0" style="-fx-background-color: #ecf0f1;" />
+        <!-- Content Area co giãn linh hoạt -->
+        <StackPane fx:id="contentArea" styleClass="content-area" HBox.hgrow="ALWAYS" minWidth="500" />
     </HBox>
 </AnchorPane>
