--- a/PMP/src/main/resources/com/qnp/pmp/AdminDashboard/Dashboard.fxml
+++ b/PMP/src/main/resources/com/qnp/pmp/AdminDashboard/Dashboard.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.UserDashboardController">
+<AnchorPane stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qnp.pmp.controllers.AdminDashBoardController">
     <HBox AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
         <!-- Sidebar cố định -->
         <VBox prefWidth="200.0" minWidth="180" maxWidth="250" spacing="10.0" style="-fx-background-color: #2c3e50;">
-            <Label styleClass="sidebar-title" text="🧑‍💻 User" />
+            <Label styleClass="sidebar-title" text="🧑‍💻 Admin" />
             <ListView fx:id="menuList" styleClass="sidebar-list" VBox.vgrow="ALWAYS" />
         </VBox>
 
